overflow fixed

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,7 +15,10 @@
 
 .main {
     margin: 32px 128px;
+    max-width: 100vw;
 }
+
+
 
 .processContainer {
     display: flex;
